appId: ${appId}
tags:
  - subflow
---
- assertVisible:
    id: collection.editor.screen

- eraseText

- inputText: ${collectionName}

- tapOn:
    id: collection.editor.cta.button
