name: >-
  [Collections]
  When editing a collection, and it exists,
  it can be edited via a navigation from the library
appId: ${appId}
env:
  databaseFixture: onboarding/complete
  newCollectionName: New Collection Name
  oldCollectionName: Collection Name
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - runFlow: ../../library/__subflows__/view-library.yaml

      - tapOn:
          text: ${oldCollectionName}

      - tapOn:
          id: library.collection.edit.link

      - runFlow:
          file: ../__subflows__/edit-collection.yaml
          env:
            collectionName: ${newCollectionName}

      - assertVisible:
          id: library.screen

      - assertVisible:
          text: ${newCollectionName}
