name: >-
  [Home] When multiple collections exist, it is possible to switch between them
appId: ${appId}
env:
  databaseFixture: home/multiple-collections
  collectionName: Test Collection 2
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - tapOn:
          id: home.collection-menu.link

      - tapOn:
          text: ${collectionName}

      - assertVisible:
          id: home.screen

      - assertVisible:
          text: ${collectionName}

      - stopApp

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - assertVisible:
          id: home.screen

      - assertVisible:
          text: ${collectionName}
