name: '[Library] When editing a collection > and it exists > it can be edited via a navigation from the library'
appId: ${appId}
env:
  databaseFixture: onboarding/complete
  newCollectionName: New Collection Name
  oldCollectionName: Collection Name
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: ${databaseFixture}

- launchApp

- runFlow: ../__subflows__/view-library.yaml

- tapOn:
    text: ${oldCollectionName}

- assertVisible:
    text: ${oldCollectionName}
    selected: true

- tapOn:
    id: library.collection.edit.link

- runFlow:
    file: ../__subflows__/edit-collection.yaml
    env:
      collectionName: ${newCollectionName}
