name: '[Library] When editing a note > and it exists > it can be edited via a navigation from the library'
appId: ${appId}
env:
  databaseFixture: onboarding/complete
  collectionName: Collection Name
  front: New Front 1
  back: New Back 1
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: ${databaseFixture}

- launchApp

- runFlow: ../__subflows__/view-library.yaml

- tapOn:
    text: ${collectionName}

- tapOn:
    id: library.collection.note.link
    index: 0

- tapOn:
    text: Edit

- runFlow:
    file: ../__subflows__/edit-note.yaml
    env:
      front: ${front}
      back: ${back}
