name: '[Library] When viewing a note > and it exists > it can be viewed via a navigation from the library'
appId: ${appId}
env:
  collectionName: Collection Name
  databaseFixture: onboarding/complete
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: ${databaseFixture}

- launchApp

- runFlow: ../__subflows__/view-library.yaml

- tapOn:
    text: ${collectionName}

- assertVisible:
    text: ${collectionName}
    selected: true

- tapOn:
    id: library.collection.note.link
    index: 0

- assertVisible:
    id: library.note.screen
