appId: ${appId}
tags:
  - subflow
---
- assertVisible:
    id: note-editor.screen

- tapOn:
    id: note.note-editor.side-0.editor

- inputText: ${front}

- assertVisible:
    text: ${front}

- tapOn:
    id: note.note-editor.side-1.editor

- inputText: ${back}

- assertVisible:
    text: ${back}

- runFlow:
    when:
      true: ${collection}
    commands:
      - tapOn:
          id: note.note-editor.collection.select.open.button
      - tapOn:
          text: ${collection}
      - tapOn:
          id: note.note-editor.collection.select.done.button

- runFlow:
    when:
      true: ${reversible}
    commands:
      - tapOn:
          id: note.note-editor.reversible.button

- runFlow:
    when:
      true: ${separable}
    commands:
      - tapOn:
          id: note.note-editor.separable.button

- tapOn:
    id: note.note-editor.cta.button

- assertVisible:
    id: library.note.screen

- assertVisible:
    text: .*${front}.*

- assertVisible:
    text: .*${back}.*
