name: >-
  [Notes] When viewing a note, and it exists, it can be viewed via a navigation from the library
appId: ${appId}
env:
  collectionName: Collection Name
  databaseFixture: onboarding/complete
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - runFlow: ../../library/__subflows__/view-library.yaml

      - tapOn:
          text: ${collectionName}

      - tapOn:
          id: library.collection.note.link
          index: 0

      - assertVisible:
          id: library.note.screen
