appId: ${appId}
tags:
  - subflow
env:
  front: Front 1
  back: Back 1
---
- assertVisible:
    id: onboarding.note-editor.screen

- inputText: ${front}

- tapOn:
    id: onboarding.note-editor.side-1.editor

- inputText: ${back}

- tapOn:
    id: onboarding.note-editor.reversible.button

- tapOn:
    id: onboarding.note-editor.separable.button

- tapOn:
    id: onboarding.note-editor.cta.button

- assertVisible:
    text: .*${front}.*

- assertVisible:
    text: .*${back}.*
