appId: ${appId}
tags:
  - subflow
---
- repeat:
    while:
      visible:
        id: review.show-answer.button

    commands:
      - assertVisible:
          id: review.screen

      - tapOn:
          id: review.show-answer.button

      - tapOn:
          id: review.rate.easy.button
